<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:context="loginFirebase.CadastroUsuario">

            //Título - Criar Conta

            //Campo - Cadastro E-mail

            //Campo - Cadastro Senha

            //Confirmar senha


            //Check Mostrar Senha

            //Botão Cadastrar

            //Botão retornar Login

            <EditText
                android:id="@+id/edt_email_cadastro"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:hint="@string/e_mail_v1"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edt_password_cadastro"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:hint="@string/senha_v1"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/edt_confirmar_senha_cadastro"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:hint="@string/confirmar_senha_v1"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:tooltipText="digite a confirmacao da senha" />

            <CheckBox
                android:id="@+id/ckb_mostrar_senha_cadastro"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:layout_marginRight="70dp"
                android:buttonTint="@color/black"
                android:text="@string/mostrar_senha_v1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="#EC0505"
                android:text="@string/cadastrar_v1"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_login_cadastro"
                android:layout_width="380dp"
                android:layout_height="wrap_content"

                android:background="#EC0505"
                android:text="@string/login_v1"
                android:textColor="@color/white" />

            //Barra de carregamento

            <ProgressBar
                android:id="@+id/loginProgressBar_cadastro"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="34dp"

                android:indeterminate="true"
                android:indeterminateTint="@color/black"
                android:visibility="invisible" />


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</ScrollView>
