<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff"
    android:padding="1dp"
    android:id="@+id/llFundoLista"
    android:layout_width="match_parent"
    android:layout_height="480dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="9dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="94dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="314dp"
            android:src="@drawable/image" />

        <TextView
            android:id="@+id/tvListaNomeAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_marginTop="-6dp"
            android:fontFamily="monospace"
            android:gravity="center"
            android:lineSpacingExtra="8sp"
            android:textAlignment="viewStart"
            android:textColor="#051EAA"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="97dp"
            android:layout_marginEnd="203dp"
            android:text="@string/nota2_v1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="207dp"
            android:text="@string/matricula_v1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:layout_alignParentEnd="true"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="202dp"
            android:gravity="top"
            android:text="@string/nota1_v1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"></TextView>

        <TextView
            android:layout_width="84dp"
            android:layout_height="wrap_content"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="123dp"
            android:layout_marginEnd="202dp"
            android:text="@string/status_v1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="151dp"
            android:layout_marginEnd="196dp"
            android:text="@string/nota_final_v1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListaNotaFinal"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="146dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="serif"
            android:textColor="#051EAA"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListaMatricula"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="47dp"
            android:text="Matrícula"
            android:textAlignment="viewStart"
            android:textColor="#051EAA"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvListaNota1"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="49dp"
            android:text="nota n1"
            android:textAlignment="viewStart"
            android:textColor="#051EAA"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListaStatus"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="122dp"
            android:layout_marginEnd="48dp"
            android:textColor="#051EAA"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListaNota2"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="49dp"
            android:text="nota n2"
            android:textColor="#051EAA"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/etmlObservacao"
            android:layout_width="397dp"
            android:layout_height="57dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="239dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="serif"
            android:textColor="#051EAA"
            android:textSize="17dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListaData"
            android:layout_width="94dp"
            android:layout_height="17dp"
            android:layout_alignBottom="@+id/tvListaSunstitutiva"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="307dp"
            android:layout_marginBottom="31dp"
            android:text="Data"
            android:textAlignment="viewStart"
            android:textColor="#051EAA"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="181dp"

            android:layout_marginEnd="175dp"
            android:text="@string/substitutiva_v1"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvListaSunstitutiva"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="215dp"
            android:layout_marginTop="181dp"
            android:layout_marginEnd="10dp"

            android:textAlignment="viewStart"
            android:textColor="#051EAA"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="134dp"
            android:background="#F12233"
            android:text="FADERGS"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="209dp"
            android:background="#F12233"
            android:text="@string/observa_o_v1"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12dp"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>




